--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.22.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^29.3.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.3",
     "terser-webpack-plugin": "^5.0.3",
